# ocl_samples

./: README.md
GodRays/: CMakeLists.txt  GodRays.cl  GodRays.cpp  GodRaysNative.cpp
GodRays/common/: svmbasic.cl  utils.cpp
GodRays/include/: oclobject.hpp  utils.h
device_caps/: CMakeLists.txt  capsbasic.cpp
gemm/V0/: CMakeLists.txt  gemm.cl  gemm.cpp
gemm/V1/: Opt_MatrixMultiplication.cl  Opt_MatrixMultiplication.cpp
gemm/V2/: CMakeLists.txt  Opt_MatrixMultiplication.cl  Opt_MatrixMultiplication.cpp
imagefrombuffer/: CMakeLists.txt  ImageFromBuffer.cl  ImageFromBuffer.cpp
imagefrombuffer/common/: basic.cpp
imagefrombuffer/include/: basic.hpp
medianfilter/: CMakeLists.txt  MedianFilter.cl  MedianFilter.cpp
medianfilter/common/: basic.cpp  utils.cpp
multi_device/: CMakeLists.txt
multi_device/common/: oclobject.cpp
multi_device/include/: basic.hpp  oclobject.hpp
multi_device/src/: kernel.cpp  multi.cpp  multidevice.cpp  multidevice.hpp  shared.cpp  system.cpp
oclBandwidthTest/: CMakeLists.txt
oclBandwidthTest/include/: cmd_arg_reader.h  oclUtils.h  shrQATest.h  shrUtils.h
oclBandwidthTest/src/: cmd_arg_reader.cpp  oclBandwidthTest.cpp  oclUtils.cpp
oclBoxFilter/: CMakeLists.txt
oclBoxFilter/src/: oclBoxFilter.cpp
oclConvolutionSeparable/: CMakeLists.txt
oclCopyComputeOverlap/: CMakeLists.txt
oclDCT8x8/: CMakeLists.txt
oclDXTCompression/: CMakeLists.txt
oclDeviceQuery/: CMakeLists.txt
oclDotProduct/: CMakeLists.txt
oclHiddenMarkovModel/: CMakeLists.txt
oclHistogram/: CMakeLists.txt  Histogram256.ptx  Histogram64.ptx  SdkConsoleLog.txt
oclInlinePTX/: CMakeLists.txt
oclMarchingCubes/: CMakeLists.txt
oclMatVecMul/: CMakeLists.txt
oclMatrixMul/: CMakeLists.txt
oclMedianFilter/: CMakeLists.txt
oclMedianFilter/include/: shrUtils.h
oclMedianFilter/src/: MedianFilter.cl  oclMedianFilter.cpp
oclMersenneTwister/: CMakeLists.txt
oclMultiThreads/: CMakeLists.txt
oclNbody/: CMakeLists.txt
oclNbody/src/: oclNbody.cpp  oclNbodyKernel.cl
oclParticles/: CMakeLists.txt
oclParticles/src/: main.cpp
oclPostprocessGL/: CMakeLists.txt
oclQuasirandomGenerator/: CMakeLists.txt
oclRadixSort/: CMakeLists.txt
oclRecursiveGaussian/: CMakeLists.txt
oclRecursiveGaussian/src/: RecursiveGaussian.cl  oclRecursiveGaussian.cpp
oclReduction/: CMakeLists.txt
oclScan/: CMakeLists.txt  FindOpenCL.cmake
oclSimpleGL/: CMakeLists.txt
oclSimpleGL/src/: oclSimpleGL.cpp
oclSimpleMultiGPU/: CMakeLists.txt
oclSimpleTexture3D/: CMakeLists.txt
oclSimpleTexture3D/src/: oclSimpleTexture3D.cpp
oclSobelFilter/: CMakeLists.txt
oclSobelFilter/src/: SobelFilter.cl  (+1 more)
oclSortingNetworks/: CMakeLists.txt
oclTranspose/: CMakeLists.txt
oclTridiagonal/: CMakeLists.txt
oclVectorAdd/: CMakeLists.txt
oclVolumeRender/: CMakeLists.txt
optimization/: CMakeLists.txt  SimpleOptimizations.cl  SimpleOptimizations.cpp
sample/: CMakeLists.txt  opencl_example.cc
sobel_opt/: CMakeLists.txt  ProcGraphicsOpt.cl  ProcGraphicsOpt.cpp
svm_test/CoarseGrained/: CMakeLists.txt  svmbasic.cpp
tonemapping/: CMakeLists.txt  ToneMapping.cl  ToneMapping.cpp
(+23 files in other folders)
